--- a/MtgLifeCounter.csproj
+++ b/MtgLifeCounter.csproj
@@ -105,6 +105,9 @@
     <Compile Include="LifeControl.xaml.cs">
       <DependentUpon>LifeControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ThreePlayerPage.xaml.cs">
+      <DependentUpon>ThreePlayerPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -150,6 +153,10 @@
     <Page Include="LifeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ThreePlayerPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
